fix: correccion de pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Ejecutar pruebas con pytest
-        run: pytest -v
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest -v
